foundation-pure test now also Java 8 compatible